<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewGirisYap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/girisyap"
        android:textColor="@color/cobalt_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        android:layout_above="@id/linearlayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/linearlayout">

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/txt_box"
            android:drawableStart="@drawable/custom_email_input"
            android:hint="@string/mailadresi"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextSifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/txt_box"
            android:drawableStart="@drawable/custom_password_input"
            android:hint="@string/sifre"
            android:padding="12dp"
            android:inputType="textPassword"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sifreyi_goster"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:id="@+id/checkbox_sifregoster" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonGirisYap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/girisyap"
        android:background="@drawable/buton_bg"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/linearlayout"
        android:layout_marginTop="50dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/giristen_kayida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/kayit_ol"
        android:textColor="@color/cobalt_blue"
        android:textAlignment="center"
        android:layout_marginBottom="32dp"
        android:textSize="26sp" />
</RelativeLayout>