<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/profilfrag_layout"
        android:background="@color/white"
        tools:context=".ProfilFragment"   >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/cobalt_blue" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_menu_24"
                android:id="@+id/ib_menu"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:layout_gravity="left|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtview_profilim"
                android:text="@string/profilim"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_margin="5dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_mode_24"
                android:id="@+id/ib_produzenle"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:layout_gravity="right|center_vertical" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="left|center_vertical"
                app:cardPreventCornerOverlap="false"
                app:cardCornerRadius="75dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ivprofilfoto"
                    android:scaleType="fitCenter"
                    android:background="@drawable/baseline_person_3_24" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@id/ivprofilfoto"
                android:layout_margin="10dp"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_kullaniciadgsoter"
                    android:hint="@string/KullaniciAdi"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_isimgoster"
                    android:textSize="20sp"
                    android:hint="@string/isim"
                    android:layout_below="@id/tv_kullaniciadgsoter"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sinavgoster"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sinav"
                    android:layout_below="@id/tv_isimgoster" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:id="@+id/tv_biogoster"
            android:textSize="16sp"
            android:hint="@string/bio"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="GÖNDERİLER"
            android:textColor="@color/white"
            android:background="@color/cobalt_blue"
            android:paddingStart="20dp"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gonderiler"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="60dp" />

    </LinearLayout>
</ScrollView>